Commit fontes atuais