@@ -16,7 +16,7 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
-		<dependency>	
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -27,25 +27,8 @@
 		<profile>
 			<id>docker</id>
 			<build>
-			<finalName>${project.name}</finalName>
+				<finalName>${project.name}</finalName>
 				<plugins>
-					<plugin>
-						<groupId>com.spotify</groupId>
-						<artifactId>dockerfile-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>default</id>
-								<goals>
-									<goal>build</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<repository>${docker-repository.properties}/${project.name}</repository>
-							<tag>${project.version}</tag>
-							<skipDockerInfo>${docker-info.properties}</skipDockerInfo>
-						</configuration>
-					</plugin>
 					<plugin>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-maven-plugin</artifactId>
@@ -68,6 +51,29 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+						<groupId>com.spotify</groupId>
+						<artifactId>dockerfile-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>default</id>
+								<phase>package</phase>
+								<goals>
+									<goal>build</goal>
+									<goal>push</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+							<repository>${docker-repository.properties}/${project.name}</repository>
+							<tag>${project.version}</tag>
+							<skipDockerInfo>${docker-info.properties}</skipDockerInfo>
+							<buildArgs>
+								<JAR_FILE>target/${project.name}.jar</JAR_FILE>
+							</buildArgs>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -81,7 +87,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<release>${java.version}</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<compilerArgs>${compiler-args.properties}</compilerArgs>
 				</configuration>
 				<executions>
 					<execution>
@@ -93,8 +99,8 @@
 					<execution>
 						<id>build-info</id>
 						<goals>
-                        	<goal>build-info</goal>
-                    	</goals>
+							<goal>build-info</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
